--- a/src/components/NextCard/ui-card/ui-card.scss
+++ b/src/components/NextCard/ui-card/ui-card.scss
@@ -1,11 +1,9 @@
-
 .c-card * {
   display: block;
   box-sizing: border-box;
 }
 
 body {
-
   text-align: center;
   background-color: #edf3f8;
 }
@@ -13,7 +11,7 @@ body {
 .c-card {
   display: inline-block;
   width: 100%;
-//   max-width: 350px;
+  //   max-width: 350px;
   margin: 20px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -27,6 +25,7 @@ body {
 }
 .c-card__image {
   max-width: 100%;
+  height: 100%;
 }
 .c-card__body {
   padding: 20px;
@@ -57,7 +56,7 @@ body {
 }
 
 .c-card--wide {
-//   max-width: 740px;
+  //   max-width: 740px;
 }
 .c-card--wide .c-card__header {
   float: left;
@@ -72,7 +71,7 @@ body {
 }
 
 .c-card-flip {
-//   width: 450px;
+  width: 100%;
   height: 250px;
   margin: 20px auto;
   cursor: pointer;
@@ -84,16 +83,21 @@ body {
   transition: 0.8s ease-in-out;
   transform-style: preserve-3d;
 }
-.c-card-flip__front, .c-card-flip__back {
+.c-card-flip__front,
+.c-card-flip__back {
   position: absolute;
   top: 0;
   left: 0;
-  width: 450px;
+  width: 100%;
   height: 250px;
   -webkit-perspective: 1000;
   perspective: 1000;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 .c-card-flip__back {
   transform: rotateY(180deg);
@@ -111,5 +115,3 @@ body {
 .c-card-flip:hover .c-card-flip__flipper {
   transform: rotateY(180deg);
 }
-
- 
