--- a/src/components/NextButton/ui-button10/styles.scss
+++ b/src/components/NextButton/ui-button10/styles.scss
@@ -72,8 +72,8 @@
     transform: rotateY(0) translateZ(24px);
   }
   .flip a .back {
-    background-color: rgba(255,255,255,0);
-    color: rgba(34,34,34,0);
+    background-color: rgba(255, 255, 255, 0);
+    color: rgba(34, 34, 34, 0);
     -webkit-transform: rotateX(90deg) translateZ(24px);
     -moz-transform: rotateX(90deg) translateZ(24px);
     -o-transform: rotateX(90deg) translateZ(24px);
