updated button styles

--- a/src/components/NextButton6/styles.scss
+++ b/src/components/NextButton6/styles.scss
@@ -27,7 +27,7 @@ $border-color-hover: $color-black;
   }
 }
 
-.NextButtonUI6 {
+.NextButton6 {
   display: flex;
   &.btn_center {
     justify-content: center;
