--- a/src/components/NextButton8/styles.scss
+++ b/src/components/NextButton8/styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 @import '../../styles/util/mixins';
 
-.NextButtonUI8 {
+.NextButton8 {
   display: fl8x;
   &.btn_center {
     justify-content: center;
