--- a/src/components/SubscribeEmail/styles.scss
+++ b/src/components/SubscribeEmail/styles.scss
@@ -1,15 +1,14 @@
 .subscribe-email {
   .newsletter {
     padding: 20px;
-    background: #151515;
     box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    color: #555;
+    color: white;
     transition: 0.5s;
     border-radius: 2px;
     border: none;
     input {
-      margin-top: 10px;
+      margin-top: 15px;
       width: 100%;
       font-size: 12px;
       height: 39px;
@@ -20,6 +19,11 @@
       border-image: initial;
       outline: none;
       border: none;
+    }
+  }
+  :global {
+    .ant-form-item-explain {
+      line-height: 2.5715;
     }
   }
 }
