--- a/src/components/NextCard/NextCard.scss
+++ b/src/components/NextCard/NextCard.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 @import '../../styles/util/mixins';
 
-.NextCardUI2 {
+.NextCard {
   padding: rem(20) 0px;
   &.card {
     background-color: #222831;
